--- a/tests/test_manual.html
+++ b/tests/test_manual.html
@@ -4,9 +4,11 @@
 <head>
     <title>tinyMCE-mention</title>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"/>
+    <link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css" type="text/css" media="screen">
     <link rel="stylesheet" href="../css/autocomplete.css" type="text/css" media="screen">
-    <script src="../ext/jquery.min.js"></script>
-    <script src="../ext/tinymce.min.js"></script>
+    <script src="../bower_components/jquery/jquery.min.js"></script>
+    <script src="../bower_components/qunit/qunit/qunit.js"></script>
+    <script src="../bower_components/tinymce-dist/tinymce.min.js"></script>
     <script type="text/javascript" src="../mention/plugin.js"></script>
     <script type="text/javascript">
         var data1 = [
@@ -76,8 +78,6 @@
 
         //This shows that we can switch on delimiter source
         function mceSource(query, process, delimiter){
-            console.log('delimiter is');
-            console.log(delimiter);
             if(delimiter === startsWithG )
                 process(data2);
             else
