Add basic autocomplete construction of dom.

--- a/tests/test_runner.html
+++ b/tests/test_runner.html
@@ -19,7 +19,7 @@
             plugins : 'mention',
             mentions: {
                 rules: [
-                  {rule: /(^|\s|\.)rfi\s[0-9]+$/g, type: "RFI"}
+                  {rule: /(^|\s)[Rr][Ff][Ii]\s[0-9]+$/, type: "RFI"}
                 ],
                 source: [
                     { name: 'Jammie Marbury'},
