--- a/tests/test_runner.html
+++ b/tests/test_runner.html
@@ -19,7 +19,7 @@
             plugins : 'mention',
             mentions: {
                 rules: [
-                  {rule: /(^|\s)[Rr][Ff][Ii]\s[0-9]+$/, type: "RFI"}
+                  {rule: /(^|\s)[Rr][Ff][Ii]\s[0-9]+$/, type: "RFI"},
                   {rule: /(^|\s)[A-Z][a-z]+$/, type: "Name"}
                 ],
                 source: [
