--- a/tests/test_runner.html
+++ b/tests/test_runner.html
@@ -20,7 +20,7 @@
             mentions: {
                 rules: [
                   {rule: /(^|\s)[Rr][Ff][Ii]\s[0-9]+$/, type: "RFI"},
-                  {rule: /(^|\s)[A-Z][a-z]+$/, type: "Name"}
+                  {rule: /(^|\s)[A-Z][a-z]{3,}$/, type: "Name"}
                 ],
                 source: [
                     { name: 'RFI 138' },
@@ -77,7 +77,7 @@
                 ]
             },
             init_instance_callback : function(ed) {
-                QUnit.start();
+                //QUnit.start();
             }
         });
 
