Suppress qunit, cleaned up interactions, add gitignore

--- a/tests/test_runner.html
+++ b/tests/test_runner.html
@@ -23,7 +23,6 @@
                   {rule: /(^|\s)[A-Z][a-z]{3,}$/, type: "Name"}
                 ],
                 source: [
-                    { name: 'RFI 138' },
                     { name: 'Jammie Marbury'},
                     { name: 'Jenniffer Caffey'},
                     { name: 'Paul Hollen'},
@@ -73,7 +72,8 @@
                     { name: 'Edith Schebler'},
                     { name: 'Brianna Repka'},
                     { name: 'Marcella Thronson'},
-                    { name: 'Theresia Provenzano'}
+                    { name: 'Theresia Provenzano'},
+                    { name: 'RFI 138' }
                 ]
             },
             init_instance_callback : function(ed) {
